matrix/skj.chat/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: matrix
  name: skjchat
  labels:
    app.kubernetes.io/name: skjchat
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: skjchat
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: skjchat
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 8.8.8.8
        options:
          - name: ndots
            value: "2"
          - name: edns0
      securityContext:
        fsGroup: 991
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: "skjchat-data"
      containers:
        - name: dendrite
          image: ghcr.io/matrix-org/synapse:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8008
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: data
