matrix/skj.chat/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: matrix
  name: skjchat
  labels:
    app.kubernetes.io/name: skjchat
spec:
  selector:
    app.kubernetes.io/name: skjchat
  ports:
    - name: http
      protocol: TCP
      port: 8008
      targetPort: 8008
